unpackaged/main/default/objects/SLCA2__CA_CreatingField__c/SLCA2__CA_CreatingField__c.object-meta.xml
<CustomObject>
    <label>CA_CreatingField</label>
    <nameField>
        <label>CA_CreatingFields Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CA_CreatingFields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>