unpackaged/main/default/objects/SLCA2__CA_CreatingField__c/fields/SLCA2__fieldLabel__c.field-meta.xml
<CustomField>
    <fullName>SLCA2__fieldLabel__c</fullName>
    <label>fieldLabel</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>