unpackaged/main/default/objects/SLCA2__CA_CreatingField__c/fields/SLCA2__fieldOption__c.field-meta.xml
<CustomField>
    <fullName>SLCA2__fieldOption__c</fullName>
    <label>fieldOption</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>