unpackaged/main/default/objects/SLCA2__CA_CreatingField__c/fields/SLCA2__isRequiredField__c.field-meta.xml
<CustomField>
    <fullName>SLCA2__isRequiredField__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isRequiredField</label>
    <type>Checkbox</type>
</CustomField>